--- a/projects.html
+++ b/projects.html
@@ -4,24 +4,21 @@ title: Projects
 permalink: /projects/
 ---
 
-<ul style="list-style-type: none;">
+<h3>At KeatsApp</h3>
+    <ul style="list-style-type: none;">
+        <li><b>App.</b>The next generation Careers app for building better and passionate futures.</li>
+    </ul>
 
-<li><b>Noungraph</b>. A Data engineering platform that connects to the data warehouses to generate visual insights.</li>
-
-<li><b>ThinkML.</b> A nonprofit organization, a learning web platform, an online community that intend to make learning Machine learning accessible to anyone.</li>
-
-<li><b>Workplace.</b> Intuitive project management and team experience platform helps companies evolve their performance management with reviews, real-times feedback, clear goal setting and one-on-one tools.
-
-<li><b>Elzy.</b> A human interface built for highly repetitive and tedious work saving billions of human hours.
-
-<li><b>Hoppercamp.</b> A new initiative with one ambition in mind: to help students of all ages and backgrounds with a new approach to learn Computer Science.</li>
-
-<li><b>DeepRadiograph.</b> Platform for accurately detecting and highlight abnormalities, reducing the chances of missing from healthcare imaging data. Initiative for more a affordable healthcare with the power of Deep learning algorithms.
-
-<li><b>Newsgraph.</b>Project aimed at generating a coherent chain linking the source and target documents into a meaningful story.</li>
-
-<li><b>Waggon.</b> Intelligent bookmarking application that helps to keeps your and important links and pages, even on the go.</li>
-
-<li><b>CodeTable.</b> a web service that compiles and executes code and returns the program output. It extends itself as the online compiler/interpreter, designed to keep online programming and development faster, easier and simpler.</li>
-
-</ul>
+<h3>At Soulpage</h3>
+    <ul style="list-style-type: none;">
+        <li><b>Libero</b>. Video Conferencing and Communication application made for India.</li>
+        <li><b>DeepLobe</b>. Machine Learning API's as Service.</li>
+        <li><b>DFlux</b>. A Data engineering platform that connects to the data warehouses to generate visual insights and create models.</li>
+    </ul>
+<h3>At Caravel.AI</h3>
+    <ul style="list-style-type: none;">
+        <li><b>Elzy.</b> A human interface built for highly repetitive and tedious work.</li> 
+        <li><b>DeepRadiograph.</b> Platform for detecting and highlight abnormalities, reducing the chances of missing from healthcare imaging data. Initiative for more a affordable healthcare with the power of Deep learning algorithms.</li>
+        <li><b>CodeTable.</b> a web service that compiles and executes code and returns the program output. It extends itself as the online compiler/interpreter, designed to keep online programming and development faster, easier and simpler.</li>
+        <li><b>Consulting</b> on many other AI and Data Science Software Projects.</li>
+    </ul>
